# bio-protein-search

./: .gitignore  README.md
backend/: app.py  models.py  pyproject.toml
backend/routes/: api.py
backend/services/: data_service.py
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/: AppLayout.tsx  ProteinDetail.tsx  ProteinList.tsx  SearchBar.tsx
frontend/src/pages/: HomePage.tsx  NotFoundPage.tsx  ProteinPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
